# Skinshop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  theme.config.ts  vite.config.ts
src/: app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte
src/routes/: +layout.svelte  +page.svelte
