[package]
name = "skinshop"
version = "0.0.0"
description = "Professional Minecraft Skin creation software. Create stunning skins."
authors = ["QuirkStudios", "Cameron Whyte"]
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/quirk-studios/open-source/skinshop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
